[package]
name = "bm3d_core"
version = "0.9.0"
edition = "2021"
description = "Pure Rust BM3D denoising algorithm core"
license = "MIT"
repository = "https://github.com/Safari77/bm3d_core"
# Original: "https://github.com/ornlneutronimaging/bm3dornl"
readme = "README.md"
keywords = ["image-processing", "denoising", "bm3d", "noise-reduction", "scientific-computing"]
categories = ["multimedia::images", "science"]
authors = ["Oak Ridge National Laboratory Neutron Imaging Team"]

[lib]
name = "bm3d_core"
crate-type = ["rlib"]

[dependencies]
ndarray = "0.15"
num-traits = "0.2"
rayon = "1.8"
rustfft = "6.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
libc = "0.2"
rand = "0.8"
rand_distr = "0.4"

[[bench]]
name = "bm3d_benchmarks"
harness = false
